--- a/web/index.html
+++ b/web/index.html
@@ -40,6 +40,9 @@
   <script src="flutter.js" defer></script>
 </head>
 <body>
+  <script async
+          src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBL-W31kzyBTvqVRJ_hNl867UXsCtkE1wI&libraries=drawing">
+  </script>
   <script>
     window.addEventListener('load', function(ev) {
       // Download main.dart.js
