fix: web google sign in

--- a/web/index.html
+++ b/web/index.html
@@ -26,6 +26,8 @@
   <meta name="apple-mobile-web-app-title" content="afadmobileapp">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
+  <meta name="google-signin-client_id" content="64197882688-ojv3ccnbj5nvbfl75uc4r41k9r1o2p8e.apps.googleusercontent.com">
+
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
